[package]
name = "camera_component"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["camera_component"]
description = "camera component and manager for the scene_graph lib"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-camera_component.git"
homepage = "https://github.com/nathanfaucett/rs-camera_component"


[dependencies.scene_graph]
git = "https://github.com/nathanfaucett/rs-scene_graph.git"

[dependencies.transform2d_component]
git = "https://github.com/nathanfaucett/rs-transform2d_component.git"

[dependencies.transform3d_component]
git = "https://github.com/nathanfaucett/rs-transform3d_component.git"

[dependencies.mat4]
git = "https://github.com/nathanfaucett/rs-mat4.git"
