[package]
name = "camera_component"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["camera_component"]
description = "camera component and manager for the scene_graph lib"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-camera_component.git"
homepage = "https://github.com/nathanfaucett/rs-camera_component"


[dependencies.scene_graph]
git = "https://github.com/nathanfaucett/rs-scene_graph.git"

[dependencies.shared]
git = "https://github.com/nathanfaucett/rs-shared.git"

[dependencies.transform_components]
git = "https://github.com/nathanfaucett/rs-transform_components.git"

[dependencies.mat4]
git = "https://github.com/nathanfaucett/rs-mat4.git"
